zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/call_runtime_known_inline_fn_ptr.zig
export fn entry() void {
    var a = &b;
    a = a;
    a();
}
inline fn b() void {}

// error
//
// :4:5: error: unable to resolve comptime value
// :4:5: note: function being called inline must be comptime-known
